Topic 5 (Operations and Monitoring)/k8s_demos/ingress_demo/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    name: app
spec:
  containers:
  - name: app
    image: sh3b0/app_python
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: NodePort
  selector:
    name: app
  ports:
  - name: svc-port
    port: 8080
    targetPort: 8080
